feat: Offer handling moved to peer-setup
In the setup where we expose and use the oid4vci agent directly rather
than wrapping it, we need the ec-issuer to only create offers on the
issuer agent. Then leave the offer negotiation etc to the oid4vci agent.
